RESOLVED FIXED226861
[JSC] Ignore Intl.NumberFormat feature options when linked-ICU is old
https://bugs.webkit.org/show_bug.cgi?id=226861
Summary [JSC] Ignore Intl.NumberFormat feature options when linked-ICU is old
Yusuke Suzuki
Reported 2021-06-09 18:16:58 PDT
[JSC] Ignore Intl features when linked-ICU is old
Attachments
Patch (4.31 KB, patch)
2021-06-09 18:19 PDT, Yusuke Suzuki
no flags
Yusuke Suzuki
Comment 1 2021-06-09 18:19:04 PDT
Yusuke Suzuki
Comment 2 2021-06-09 18:19:07 PDT
Ross Kirsling
Comment 3 2021-06-09 18:24:04 PDT
Comment on attachment 431038 [details] Patch r=me. Seems unfortunate but necessary.
EWS
Comment 4 2021-06-10 01:07:07 PDT
Committed r278697 (238669@main): <https://commits.webkit.org/238669@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 431038 [details].
Note You need to log in before you can comment on or make changes to this bug.