[JSC] Ignore Intl.NumberFormat feature options when linked-ICU is old https://bugs.webkit.org/show_bug.cgi?id=226861 rdar://77393100

Reviewed by Ross Kirsling.

Let's just ignore the option when Intl.NumberFormat features cannot be implemented since the linked ICU is old.
There is no way not to expose these features since Intl.NumberFormat's these changes are additional ones and Intl.NumberFormat existed before.

* runtime/IntlNumberFormat.cpp:
(JSC::IntlNumberFormat::initializeNumberFormat):


Canonical link: https://commits.webkit.org/238669@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@278697 268f45cc-cd09-0410-ab3c-d52691b4dbfc